# TI-search

./: .gitignore  BooleanFunction.h  CMakeCache.txt  CMakeLists.txt  Makefile  analysis.txt  analysis2.txt  callgrind.out.858  callgrind.out.931  cmake_install.cmake  compile_commands.json  getProperInputForm.cpp  gf4.in  gmon.out  main.cpp  main.cpp.gcda  main.cpp.gcno  main.gcno  new_format.in  newmain.cpp  quadratic.cpp  readme.txt  uniformity.out
control/: correction.in
decimalInput/: input_4_155.in  input_4_2.in  input_4_6.in  input_5_28.in  input_5_29.in  input_5_61.in  input_5_62.in  input_5_63.in  input_5_64.in  input_5_65.in  input_5_66.in  input_5_67.in  input_5_68.in  input_5_69.in  input_5_70.in  input_5_71.in  input_5_72.in  input_5_73.in
gf4/: end.out
input/: input_4_156.in  input_4_2.in  input_4_6.in  input_5_28.in  input_5_61.in  input_5_62.in  input_5_63.in  input_5_64.in  input_5_65.in  input_5_66.in  input_5_67.in  input_5_68.in  input_5_69.in  input_5_70.in  input_5_71.in  input_5_72.in  input_5_73.in  input_5_74.in  new_format_perm.in  raw_input1.in
input/old/: new_format.in
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
output/: input_5_69.in  input_5_70.in  input_5_71.in  input_5_72.in  input_5_73.in  input_5_75.in
